# LearnIBL

./: .gitmodules  CMakeLists.txt  README.md
include/: camera.h  mesh.h  model.h
resource/model/pokeball/source/: POKEBALLsketchfab.fbx
shaders/: background.fs  background.vs  brdf.fs  cubemap.fs  irradiance_convolution.fs  pbr.fs  prefilter_environment.fs
src/: main.cpp  model.cpp
